--- a/index.htm
+++ b/index.htm
@@ -10,13 +10,14 @@
     <style>
             html {
                 font-family: 'Roboto', sans-serif;
+                 
             }
 
     </style>
 
 </head>
 <body>
-    <h3>Ecoleta</h3>
+    <h3>Ecoleta:</h3>
 
     <a href="#"> Cadastre um ponto de coleta</a>
 
