--- a/create-point.html
+++ b/create-point.html
@@ -35,24 +35,24 @@
 
                 <div class="field">
                     <label for="name">Nome da entidade</label>
-                    <input type="text" name="name">
+                    <input type="text" name="name" required>
                 </div>
 
                 <div class="field-group">
                     <div class="field">
                         <label for="address">Endereço</label>
-                        <input type="text" name="address">
+                        <input type="text" name="address" required>
                     </div>
                     <div class="field">
                         <label for="address2">Número/complemento</label>
-                        <input type="text" name="address2">
+                        <input type="text" name="address2" required>
                     </div>
                 </div>
 
                     <div class="field-group">
                         <div class="field">
                             <label for="state">Estado</label>
-                            <select name="uf">
+                            <select name="uf" required>
                                 <option value="">Selecione o Estado</option>
                             </select>
 
@@ -61,7 +61,7 @@
                         </div>
                         <div class="field">
                             <label for="city">Cidade</label>
-                            <select name="city" disabled> /*disabled, deixa o campo indisponivel para clicar*/
+                            <select name="city" disabled required> /*disabled, deixa o campo indisponivel para clicar*/
                                 <option value="">Selecione a Cidade</option>
 
                             </select>
@@ -72,8 +72,49 @@
 
 
             </fieldset>
-            <button type="submit">Cadastrar ponto de coleta</button>
 
+            <fieldset>
+                <legend>
+                    <h2>Ítens de coleta</h2>
+                </legend>
+
+                <div class="items-grid">
+                    <li data-id="1" class="selected">
+                        <img src="/assets/lampadas.svg" alt="Lâmpada">
+                        <span>Lâmpada</span>
+                    </li>
+                    <li data-id="2">
+                        <img src="/assets/baterias.svg" alt="Pilhas e Bateías">
+                        <span>Pilhas e Bateías</span>
+                    </li>
+                    <li data-id="3">
+                        <img src="/assets/papeis-papelao.svg" alt="Papéis e Papelão">
+                        <span>Papéis e Papelão</span>
+                    </li>
+                    <li data-id="4">
+                        <img src="/assets/eletronicos.svg" alt="Residuos Eletrônicos">
+                        <span>Residuos Eletrônicos</span>
+                    </li>
+                    <li data-id="5">
+                        <img src="/assets/organicos.svg" alt="Residuos Orgânicos">
+                        <span>Residuos Orgânicos</span>
+                    </li>
+                    <li data-id="6">
+                        <img src="/assets/oleo.svg" alt="Òleo de Cozinha">
+                        <span>Òleo de Cozinha</span>
+                    </li>
+
+
+                </div>
+
+
+
+
+            </fieldset>
+
+
+
+            <button type="submit">Cadastrar ponto de coleta</button>
         </form>
 
     </div>
