fim pagina create-point

--- a/create-point.html
+++ b/create-point.html
@@ -79,7 +79,7 @@
                 </legend>
 
                 <div class="items-grid">
-                    <li data-id="1" class="selected">
+                    <li data-id="1" >
                         <img src="/assets/lampadas.svg" alt="Lâmpada">
                         <span>Lâmpada</span>
                     </li>
@@ -103,11 +103,9 @@
                         <img src="/assets/oleo.svg" alt="Òleo de Cozinha">
                         <span>Òleo de Cozinha</span>
                     </li>
-
-
                 </div>
 
-
+                    <input type="hidden" name="items">
 
 
             </fieldset>
