--- a/index.htm
+++ b/index.htm
@@ -20,7 +20,7 @@
 
             <header>
                 <img src="/assets/logo.svg" alt="Logomarca">
-                <a href="http://google.com.br"> 
+                <a href="create-point.html"> 
                     <span></span> 
                     Cadaste um ponto de coleta</a>
             </header>
@@ -46,7 +46,7 @@
                <a href="#">Fechar</a>
 
         </div>
-            <form action="">
+            <form action="/search-results.html">
                 <label for="search">Cidade</label>
                 <div class= "search field">
                     <input type="text" 
